--- a/WashWashes/app/src/main/res/values/strings.xml
+++ b/WashWashes/app/src/main/res/values/strings.xml
@@ -1,20 +1,39 @@
 <resources>
-    <string name="app_name">WashWash1</string>
+    <string name="app_name">WashWatch</string>
     <string name="action_settings">Settings</string>
-    <string name="title_home">Washers</string>
-    <string name="title_dashboard">Dryers</string>
+    <string name="set_exchange_rate">Set Exchange Rate</string>
+    <string name="main_activity_name">Convert Currency</string>
+    <string name="home">Home</string>
+    <string name="washer">Washers</string>
+    <string name="dryer">Dryers</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_nav_bar">NavBar</string>
-    <string name="machine_1">Machine 1</string>
-    <string name="machine_2">Machine 2</string>
-    <string name="machine_3">Machine 3</string>
-    <string name="machine_4">Machine 4</string>
-    <string name="machine_5">Machine 5</string>
-    <string name="machine_6">Machine 6</string>
-    <string name="machine_7">Machine 7</string>
-    <string name="machine_8">Machine 8</string>
-    <string name="machine_9">Machine 9</string>
-    <string name="machine_10">Machine 10</string>
-    <string name="machine_11">Machine 11</string>
-    <string name="machine_12">Machine 12</string>
+    <string name="washer1">Washer 1</string>
+    <string name="washer2">Washer 2</string>
+    <string name="washer3">Washer 3</string>
+    <string name="washer4">Washer 4</string>
+    <string name="washer5">Washer 5</string>
+    <string name="washer6">Washer 6</string>
+    <string name="washer7">Washer 7</string>
+    <string name="washer8">Washer 8</string>
+    <string name="washer9">Washer 9</string>
+    <string name="washer10">Washer 10</string>
+    <string name="washer11">Washer 11</string>
+    <string name="washer12">Washer 12</string>
+
+    <string name="dryer1">Dryer 1</string>
+    <string name="dryer2">Dryer 2</string>
+    <string name="dryer3">Dryer 3</string>
+    <string name="dryer4">Dryer 4</string>
+    <string name="dryer5">Dryer 5</string>
+    <string name="dryer6">Dryer 6</string>
+    <string name="dryer7">Dryer 7</string>
+    <string name="dryer8">Dryer 8</string>
+    <string name="dryer9">Dryer 9</string>
+    <string name="dryer10">Dryer 10</string>
+    <string name="dryer11">Dryer 11</string>
+    <string name="dryer12">Dryer 12</string>
+    <string name="block_59">Block 59</string>
+    <string name="block_57">Block 57</string>
+    <string name="block_55">Block 55</string>
 </resources>
