--- a/WashWashes/app/src/main/res/values/strings.xml
+++ b/WashWashes/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WashWatch</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Report</string>
     <string name="home">Home</string>
     <string name="washer">Washers</string>
     <string name="dryer">Dryers</string>
